feat : board game database 수정 및 요청 코드 변경
