# back/src/routes/boardGameRouter.js
@@ -18,7 +18,4 @@ boardGameRouter.get("/games/conditions", boardgameController.findByCondition);
 // 페이지 전체 검색
 boardGameRouter.get("/search", boardgameController.search);
 
-//
-boardGameRouter.get("/insertion", boardgameController.insertData);
-
 export { boardGameRouter };
