# swagger/API.yaml
@@ -333,25 +333,6 @@ paths:
                       $ref: '#/components/schemas/BoardGame'
         '204':
           description: "조건에 맞는 데이터가 없습니다."  
-  /insertion:
-    get:
-      tags:
-        - boardGame
-      summary: test
-      parameters:
-        - name: page
-          in: query
-          required: false
-          schema:
-            type: number
-        - name: perPage
-          in: query
-          required: false
-          schema:
-            type: number
-      responses:
-        '200':
-          description: 성공
   /favorite:
     put:
       tags:
